# IronHammer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
IronHammer/: CMakeLists.txt
IronHammer/docs/notes/: 2. Data_Oriented_Design.txt
IronHammer/src/core/: Archetype.hpp  ArchetypeRegistry.hpp  ECSCommon.h  EntityManager.cpp  EntityManager.h  SlabAllocator.hpp  main.cpp  main.h
assets/: World.inl
notes/: 1. Intro_to_ECS.txt  2. Data_Oriented_Design.txt  EngineStructureTemplate.txt  ImGuiCheatSheet.txt  Reflection.txt
src/: main.cpp
src/app/: IronHammer.h
src/assets/: AssetManager.h  FontManager.h
src/assets/entityTemplates/: Circle.json  Enemy.json  EnemyTemplate.json  Entity_0_1.json  Entity_12_1.json  Entity_3_1.json  Entity_5_1.json  Entity_8_1.json  MovingTower.json  New Entity.json  Obstacle.json  Orange.json  TR.json  Test.json  Tower.json  TowerTemplate.json  a.json
src/assets/molds/: Enemy.json  Obstacle.json  Test.json  Testt.json  Tower.json
src/assets/sceneData/: test.Json
src/core/: Archetype.h  Archetype.hpp  ArchetypeDebugger.hpp  ArchetypeRegistry.hpp  BaseArchetype.h  BaseTemplatedArchetype.h  ComponentRegistry.hpp  Components.hpp  CoreComponents.hpp  ECSCommon.h  EntityManager.hpp  FrameRateHandler.h  GUISystem.cpp  GUISystem.h  SlabAllocator.hpp  TemplatedArchetype.hpp  TemplatedSlabAllocator.hpp  TypeErasedBlockAllocator.hpp  TypeErasedSlabAllocator.hpp  main.cpp  main.h
src/core/memory/: InlineEntityList.h  InlineVector.h  TemplatedSlabAllocator.hpp  TypeErasedBlockAllocator.hpp  TypeErasedSlabAllocator.hpp
src/core/reflection/: ComponentReflection.h
src/core/saving/: JsonUtility.h
src/core/utils/: Colors.h  CrashHandler.cpp  CustomTypes.hpp  Debug.h  FileHelper.h  Random.hpp  Threadpool.h  Time.h  Vect2.hpp  Vector2.hpp
src/ecs/: World.h  World.hpp  World.inl
src/ecs/archetype/: Archetype.h  ArchetypeChunk.hpp  ArchetypeDebugger.hpp  ArchetypeRegistry.hpp  BaseTemplatedArchetype.h  TemplatedArchetype.hpp
src/ecs/common/: ECSCommon.h
src/ecs/component/: ComponentRegistry.hpp  Components.hpp
src/ecs/entity/: CommandBuffer.h  EntityCommands.hpp  EntityInspector.cpp  EntityInspector.h  EntityInspector.hpp  EntityInspectorHelper.h  EntityManager.hpp  EntityTemplateInstance.cpp  EntityTemplateInstance.h  EntityTemplateManager.h  OldCommandBuffer.hpp
src/ecs/query/: Query.hpp
src/ecs/system/: BaseSystem.h  CollisionSystem.h  EntityInspector.hpp  GUISystem.cpp  GUISystem.h  ISystem.h  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  SystemRegistry.hpp
src/editor/: Editor.h  EditorConfig.h  EditorContext.h  EditorGrid.h  EditorGui.cpp  EditorGui.h  Gizmo.h  Viewport.h  ViewportGizmo.h
src/editor/debuggers/: CollisionDebugger.cpp  CollisionDebugger.h  EditorDebugger.cpp  EditorDebugger.h  FlowFieldDebugger.cpp  FlowFieldDebugger.h  IDebugTab.h  RenderingSystemDebugger.cpp  RenderingSystemDebugger.h  SystemDebuggerHub.h  WorldDebugger.cpp  WorldDebugger.h
src/editor/entityInspector/: EntityInspector.cpp  EntityInspector.h  EntityInspectorHelper.h
src/editor/entityInspector/componentGui/: ComponentGui.h  CoreComponentsGui.h  GameComponentsGui.h  PhysicsComponentsGui.h  RenderingComponentsGui.h
src/editor/panels/: BottomPanel.h  DebugPanel.h  InspectorPanel.h  MenuBarPanel.h  ViewportPanel.h
src/engine/: Engine.cpp  Engine.h  EngineMode.h
src/game/: GameComponents.hpp
src/gui/: EntityInspector.hpp  EntityInspectorHelper.h  EntityInspectorWindow.hpp  GUISystem.cpp  GUISystem.h  GuiSystem.cpp  GuiSystem.h  LogWindow.hpp
src/input/: InputManager.h  InputSystem.h
src/mold/: Mold.h  MoldInstance.cpp  MoldInstance.h  MoldManager.h
src/pathfinding/: FlowField.h  FlowFieldGenerator.h  FlowFieldSystem.h
src/physics/: BroadPhaseCollisionSystem.cpp  BroadPhaseCollisionSystem.h  CollisionCommon.h  CollisionDebugger.h  CollisionEventSystem.h  CollisionResolutionSystem.cpp  CollisionResolutionSystem.h  CollisionSystem.h  MovementSystem.h  NarrowPhaseCollisionSystem.cpp  NarrowPhaseCollisionSystem.h  PhysicsComponents.hpp
src/rendering/: RenderSystem.cpp  RenderSystem.h  RenderingComponents.hpp
src/scene/: BaseScene.h  GameScene.cpp  GameScene.h  SceneManager.h
src/sceneData/: test.Json
